# PGJ1303_Realisation2

./: .gitmodules  CMakeLists.txt
shaders/: billboard_f.glsl  billboard_v.glsl  environment_f.glsl  environment_v.glsl  skybox_f.glsl  skybox_v.glsl
src/: BillboardObject.cpp  BillboardObject.h  EnvironmentObject.cpp  EnvironmentObject.h  GlfwInputProvider.cpp  GlfwInputProvider.h  InputProvider.h  MeshScene.cpp  MeshScene.h  OpenGlUtils.cpp  OpenGlUtils.h  Scene.h  SceneDrawer.cpp  SceneDrawer.h  SceneObject.h  SkyboxObject.cpp  SkyboxObject.h  main.cpp
